--- a/src/sass/blocks/_bathroom.scss
+++ b/src/sass/blocks/_bathroom.scss
@@ -20,6 +20,7 @@
         margin: 0 auto;
         margin-top: 24px;
         max-width: 777px;
+        padding-bottom: 111px;
     }
     &__landing {
         align-self: start;
