--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -5,7 +5,7 @@
     font-family: 'roboto', sans-serif;
     margin: 0;
     padding: 0;
-  
+    transition: all 2s;
 }
 /* html {
     max-width: 1440px;
