--- a/src/sass/blocks/_deodorant.scss
+++ b/src/sass/blocks/_deodorant.scss
@@ -3,7 +3,7 @@
     &__wrapper {
         min-height: 882px;
         padding: 168px 0 0 25px;
-        background: url('../../img/deodorant/deodorant_bg.jpg') center (center/cover)	no-repeat;
+        background: url('../img/deodorant/deodorant_bg.jpg') center (center/cover)	no-repeat;
     }
 	&__item {
 		display: grid;
