--- a/src/sass/blocks/_ecolog.scss
+++ b/src/sass/blocks/_ecolog.scss
@@ -13,17 +13,17 @@
         width: 680px;
         height: 680px;
         &_1 {
-            background: url('../../img/ecolog/bg_1.jpg') center (center / cover) no-repeat;
+            background: url('../img/ecolog/bg_1.jpg') center (center / cover) no-repeat;
         }
 		&_2 {
 			padding: 270px 20px 0 20px;
 			text-align: center;
 		}
         &_4 {
-            background: url('../../img/ecolog/bg_2.jpg') center (center / cover) no-repeat;
+            background: url('../img/ecolog/bg_2.jpg') center (center / cover) no-repeat;
         }
         &_5 {
-            background: url('../../img/ecolog/bg_3.jpg') center (center / cover) no-repeat;
+            background: url('../img/ecolog/bg_3.jpg') center (center / cover) no-repeat;
         }
 		&-landing {
 			position: absolute;
