--- a/src/sass/blocks/_future.scss
+++ b/src/sass/blocks/_future.scss
@@ -6,7 +6,7 @@
         justify-content: space-between;
         max-height: 675px;
         margin-top: 49px;
-        background: url('../../img/future/future_bg.jpg') center (center / cover) no-repeat;
+        background: url('../img/future/future_bg.jpg') center (center / cover) no-repeat;
     }
 	&__title {
 		padding-top: 232px;
