--- a/src/sass/blocks/_sets.scss
+++ b/src/sass/blocks/_sets.scss
@@ -16,51 +16,51 @@
         height: 680px;
         transition: all 2s;
         &_1 {
-            background: url('../../img/sets/1/item1_bg.jpg') center (center / cover) no-repeat;
+            background: url('../img/sets/1/item1_bg.jpg') center (center / cover) no-repeat;
             &:hover {
-                background: url('../../img/sets/1/item1_bg_act.jpg') center (center / cover) no-repeat;
+                background: url('../img/sets/1/item1_bg_act.jpg') center (center / cover) no-repeat;
             }
         }
         &_2 {
-            background: url('../../img/sets/2/item2_bg.jpg') center (center / cover) no-repeat;
+            background: url('../img/sets/2/item2_bg.jpg') center (center / cover) no-repeat;
             &:hover {
-                background: url('../../img/sets/2/item2_bg_act.jpg') center (center / cover) no-repeat;
+                background: url('../img/sets/2/item2_bg_act.jpg') center (center / cover) no-repeat;
             }
         }
         &_3 {
-            background: url('../../img/sets/3/item3_bg.jpg') center (center / cover) no-repeat;
+            background: url('../img/sets/3/item3_bg.jpg') center (center / cover) no-repeat;
             &:hover {
-                background: url('../../img/sets/3/item3_bg_act.jpg') center (center / cover) no-repeat;
+                background: url('../img/sets/3/item3_bg_act.jpg') center (center / cover) no-repeat;
             }
         }
         &_4 {
-            background: url('../../img/sets/4/item4_bg.jpg') center (center / cover) no-repeat;
+            background: url('../img/sets/4/item4_bg.jpg') center (center / cover) no-repeat;
             &:hover {
-                background: url('../../img/sets/4/item4_bg_act.jpg') center (center / cover) no-repeat;
+                background: url('../img/sets/4/item4_bg_act.jpg') center (center / cover) no-repeat;
             }
         }
         &_7 {
-            background: url('../../img/sets/7/item7_bg.jpg') center (center / cover) no-repeat;
+            background: url('../img/sets/7/item7_bg.jpg') center (center / cover) no-repeat;
             &:hover {
-                background: url('../../img/sets/7/item7_bg_act.jpg') center (center / cover) no-repeat;
+                background: url('../img/sets/7/item7_bg_act.jpg') center (center / cover) no-repeat;
             }
         }
         &_8 {
-            background: url('../../img/sets/8/item8_bg.jpg') center (center / cover) no-repeat;
+            background: url('../img/sets/8/item8_bg.jpg') center (center / cover) no-repeat;
             &:hover {
-                background: url('../../img/sets/8/item8_bg_act.jpg') center (center / cover) no-repeat;
+                background: url('../img/sets/8/item8_bg_act.jpg') center (center / cover) no-repeat;
             }
         }
         &_9 {
-            background: url('../../img/sets/9/item9_bg.jpg') center (center / cover) no-repeat;
+            background: url('../img/sets/9/item9_bg.jpg') center (center / cover) no-repeat;
             &:hover {
-                background: url('../../img/sets/9/item9_bg_act.jpg') center (center / cover) no-repeat;
+                background: url('../img/sets/9/item9_bg_act.jpg') center (center / cover) no-repeat;
             }
         }
         &_10 {
-            background: url('../../img/sets/10/item10_bg.jpg') center (center / cover) no-repeat;
+            background: url('../img/sets/10/item10_bg.jpg') center (center / cover) no-repeat;
             &:hover {
-                background: url('../../img/sets/10/item10_bg_act.jpg') center (center / cover) no-repeat;
+                background: url('../img/sets/10/item10_bg_act.jpg') center (center / cover) no-repeat;
             }
         }
         &-descr {
