--- a/src/sass/blocks/_shampoobar.scss
+++ b/src/sass/blocks/_shampoobar.scss
@@ -14,7 +14,7 @@
         width: 680px;
         height: 680px;
         &_1 {
-            background: url('../../img/shampoobar/shampoobar_bg.jpg') center (center / cover) no-repeat;
+            background: url('../img/shampoobar/shampoobar_bg.jpg') center (center / cover) no-repeat;
         }
 
 		&-landing {
